# eyetype4you

./: .gitignore  Eyetype4YouInstaller.iss  LICENSE.md  LICENSE.txt  MANIFEST.in  README.md  README.txt  bot_personality.py  eyetype.py  eyetype4you.spec  index.html  main.py  main.py.backup  main.spec  package.json  personality_dialog.py  pyproject.toml  requirements.txt  setup.py  tailwind.config.js  word_memory.json
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml
data/templates/: defaults.json
docs/: cross_platform_compatibility.md  developer_guide.md  user_guide.md  wsl_compatibility.md
installer/: setup.iss
scripts/: build_exe.py  eyetype4you.spec  migrate.py  setup_wsl.sh
src/: App.tsx  index.css
src/components/: FloatingBot.tsx  MainMenu.tsx  SettingsPanel.tsx  TypingInterface.tsx
src/eyetype4you/: __init__.py  main.py
src/eyetype4you/bot/: __init__.py  bot_personality.py  personality_dialog.py
src/eyetype4you/core/: __init__.py  typing_engine.py  word_memory.py
src/eyetype4you/multibot/: __init__.py  manager.py
src/eyetype4you/ui/: __init__.py  dialogs.py  main_window.py  template_dialog.py  themes.py
src/eyetype4you/utils/: __init__.py  emoji_handler.py  path_resolver.py  platform_detector.py  templates.py  wsl_input.py
src/types/: index.ts
tests/: test_typing_engine.py
