[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eyetype4you"
version = "1.0.0"
description = "Premium AI-powered typing automation tool that simulates human-like typing"
readme = "docs/README.md"
authors = [
    {name = "EyeType4You Team"}
]
license = {file = "LICENSE.md"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]
requires-python = ">=3.8"

[project.urls]
"Homepage" = "https://eyetype4you.com"

[tool.setuptools]
package-dir = {"" = "src"}